register patient and add to database plus a styling to sign up and alert for taken username and email
partial admin page need to implement login authentication

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en"  >
 <head>
     <meta charset="ISO-8859-1">
     <title>Hello World Page</title>
@@ -9,7 +9,7 @@
   <body class="body">
     <h1 >Hello, World!</h1>
     <p>This is my first HTML page2.</p>
-    <a th:href="@{/login}">Home page</a>
-    <a href=""> Home page</a>
+    <a >Home page</a>
+    <a href="/login"> Home page</a>
 </body>
 </html>
