--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="ISO-8859-1">
     <title>Hello World Page</title>
     <link rel="stylesheet" 
-    href="style.css">
+    href="styles.css">
   </head>
   <body class="body">
     <h1 >Hello, World!</h1>
