--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"  >
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
     <title>Hello World Page</title>
     <link rel="stylesheet" 
     href="styles.css">
   </head>
-  <body class="body">
+  <body >
+    <div th:replace= "~{layout :: footer}"></div>
     <h1 >Hello, World!</h1>
     <p>This is my first HTML page2.</p>
     <a >Home page</a>
