hmtl/css/healthrecords

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,8 +28,7 @@
                      
                     <a href="/">Home</a>
                     <a href="/login">Login</a>
-                    <a href="">Sign-up</a>
-                    <a href=''>Contact-Us</a>
+                    <a href="/signup">Sign-up</a>                    
                     <a href= "/aboutus">About-us</a>     
                                  
                 </div>
